manifests/frontend/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shepard-frontend
  namespace: shepard
spec:
  gateways:
    - shepard/shepard-gateway
  hosts:
    - '$SHEPARD_DNS_NAME'
  http:
    - name: "shepard-frontend-route"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.shepard.svc.cluster.local
            port:
              number: 80
